TPC-H Q12 (hash join + group by) and Q14 (hash join + computed agg) benchmarks. Update docs with real system specs.